Bug 240615 - It's not possible to set up an account via kaddressbook-mobile
Summary: It's not possible to set up an account via kaddressbook-mobile
Status: RESOLVED FIXED
Alias: None
Product: KAddressbook Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-03 16:42 UTC by Bjoern Ricks
Modified: 2011-02-18 10:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2010-06-03 16:42:02 UTC
Version:           enterprise (using Devel) 
OS:                Linux

KAddressbook-mobile has a button to add an account. Clicking at the button starts the Account Wizard. After inserting the necessary account data and clicking next, it's not possible to choose and configure any resource. The dialog doesn't show anything.

Reproducible: Always



Expected Results:  
Let the user choose different resources for addressbooks.
Comment 1 Volker Krause 2010-06-22 11:25:23 UTC
SVN commit 1141199 by vkrause:

join type arguments for accountwizard correctly

BUG: 240615


 M  +1 -3      kdeclarativemainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1141199