join type arguments for accountwizard correctly

BUG: 240615

svn path=/branches/work/komo/kdepim/; revision=1141199